--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
     <link rel="stylesheet" href="./resources/css/style.css">
 </head>
 <header>
-    <h1 class="title">Discover hidden places in the world around you</h1>
+    <h1 class="title1 title-family">Discover hidden places in the world around you</h1>
     <h3 class="link"><a href="https://753db3455d034d4f825cd6795089e77f.cc-propeller.cloud/#">Download Excursion (Coming soon)</a></h3>
 </header>
 <body>
-    
+    <p>
+        <video src="/Users/dylankennedy/Desktop/Codeacademy/projects/excursion/resources/video/excursion.mp4" controls>Video not supported</video>
+    </p>
+    <article>
+        <h2 class="title2 title-family">Your personal travel guide</h2>
+        <p class="h2p">Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <image src="resources/image/camp.jpeg" alt="a camp site">
+    </article>
 </body>
+<footer>
+    <p><image src="resources/image/phone.png"></p>
+    <h1 class="title1 title-family">Coming Soon for iPhone and Android</h1>
+    <h3 class="link"><a href="https://753db3455d034d4f825cd6795089e77f.cc-propeller.cloud/#">Download Excursion (Coming soon)</a></h3>
+    <p class="copyright">© Excursion</p>
+</footer>
 </html>
